--- a/ansible/install_infra/roles/wireguard/vars/main.yml
+++ b/ansible/install_infra/roles/wireguard/vars/main.yml
@@ -9,6 +9,7 @@ wireguard_ufw_applications:
 
 wireguard:
   config_dir: /etc/wireguard
+  generation_dir: "{{ wireguard_generation_dir }}"
   cidr_prefix: "{{ wireguard_cidr_prefix | mandatory }}"
 
   server:
