--- a/ansible/install_infra/roles/wireguard/defaults/main.yml
+++ b/ansible/install_infra/roles/wireguard/defaults/main.yml
@@ -5,6 +5,7 @@ wireguard_server_interface: wg0
 wireguard_server_listen_port: 51820
 #wireguard_cidr_prefix: "192.168.1"
 #wireguard_server_endpoint: public_ip:51820
+wireguard_generation_dir: "/etc/wireguard-generation"
 
 #wireguard_clients:
 #  client1:
