--- a/ansible/install_applications/roles/infra-gotify.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/infra-gotify.deploy/tasks/main.yml
@@ -40,7 +40,7 @@
 
 - name: List existing users
   uri:
-    url: "https://127.0.0.1:{{ kubernetes_ingress_https_port }}/gotify/user"
+    url: "https://{{ groups['kubernetes_nodes'][0] }}:{{ kubernetes_ingress_https_port }}/gotify/user"
     method: GET
     headers:
       Host: "web.{{ web_base_domain }}"
@@ -53,7 +53,7 @@
 
 - name: Create missing users
   uri:
-    url: "https://127.0.0.1:{{ kubernetes_ingress_https_port }}/gotify/user"
+    url: "https://{{ groups['kubernetes_nodes'][0] }}:{{ kubernetes_ingress_https_port }}/gotify/user"
     method: POST
     headers:
       Host: "web.{{ web_base_domain }}"
@@ -73,7 +73,7 @@
 
 - name: List existing applications
   uri:
-    url: "https://127.0.0.1:{{ kubernetes_ingress_https_port }}/gotify/application"
+    url: "https://{{ groups['kubernetes_nodes'][0] }}:{{ kubernetes_ingress_https_port }}/gotify/application"
     method: GET
     headers:
       Host: "web.{{ web_base_domain }}"
@@ -92,7 +92,7 @@
 
 - name: Create missing applications
   uri:
-    url: "https://127.0.0.1:{{ kubernetes_ingress_https_port }}/gotify/application"
+    url: "https://{{ groups['kubernetes_nodes'][0] }}:{{ kubernetes_ingress_https_port }}/gotify/application"
     method: POST
     headers:
       Host: "web.{{ web_base_domain }}"
