--- a/ansible/install_applications/roles/auth-openldap.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/auth-openldap.deploy/tasks/main.yml
@@ -36,20 +36,6 @@
   with_fileglob:
     - "{{ role_path }}/app/deploy/*.yaml*"
 
-- name: Fetch OpenLDAP internal endpoint
-  k8s_info:
-    api_version: v1
-    kind: Service
-    name: openldap
-    namespace: "{{ openldap.namespace }}"
-    kubeconfig: "{{ kubeconfig_path }}"
-    context: "{{ kubeconfig_context }}"
-  register: openldap_service
-
-- name: Set OpenLDAP internal endpoint
-  set_fact:
-    openldap_internal_uri: "ldap://{{ openldap_service.resources[0].spec.clusterIP }}"
-
 - name: Wait for OpenLDAP to be available
   k8s_info:
     kind: StatefulSet
@@ -84,10 +70,9 @@
 
 - name: Create LDAP base OUs
   ldap_entry:
-    server_uri: "{{ openldap_internal_uri }}"
+    server_uri: "ldaps://{{ nginx_keepalived_instance_internal_virtual_ip }}"
     bind_dn: "{{ openldap.ldap.admin_dn }}"
     bind_pw: "{{ openldap.ldap.admin_password }}"
-    start_tls: yes
     validate_certs: no
     dn: "{{ item }}"
     objectClass: organizationalUnit
@@ -98,10 +83,9 @@
 
 - name: Create LDAP users
   ldap_entry:
-    server_uri: "{{ openldap_internal_uri }}"
+    server_uri: "ldaps://{{ nginx_keepalived_instance_internal_virtual_ip }}"
     bind_dn: "{{ openldap.ldap.admin_dn }}"
     bind_pw: "{{ openldap.ldap.admin_password }}"
-    start_tls: yes
     validate_certs: no
     dn: "cn={{ item.id }},{{ openldap.ldap.structure_users_ou_dn }}"
     objectClass: inetOrgPerson
@@ -114,10 +98,9 @@
 
 - name: Set LDAP users attributes
   ldap_attrs:
-    server_uri: "{{ openldap_internal_uri }}"
+    server_uri: "ldaps://{{ nginx_keepalived_instance_internal_virtual_ip }}"
     bind_dn: "{{ openldap.ldap.admin_dn }}"
     bind_pw: "{{ openldap.ldap.admin_password }}"
-    start_tls: yes
     validate_certs: no
     dn: "cn={{ item.id }},{{ openldap.ldap.structure_users_ou_dn }}"
     attributes:
@@ -131,10 +114,9 @@
 
 - name: Set LDAP users password
   ldap_passwd:
-    server_uri: "{{ openldap_internal_uri }}"
+    server_uri: "ldaps://{{ nginx_keepalived_instance_internal_virtual_ip }}"
     bind_dn: "{{ openldap.ldap.admin_dn }}"
     bind_pw: "{{ openldap.ldap.admin_password }}"
-    start_tls: yes
     validate_certs: no
     dn: "cn={{ item.id }},{{ openldap.ldap.structure_users_ou_dn }}"
     passwd: "{{ item.password }}"
@@ -144,10 +126,9 @@
 
 - name: Create LDAP groups
   ldap_entry:
-    server_uri: "{{ openldap_internal_uri }}"
+    server_uri: "ldaps://{{ nginx_keepalived_instance_internal_virtual_ip }}"
     bind_dn: "{{ openldap.ldap.admin_dn }}"
     bind_pw: "{{ openldap.ldap.admin_password }}"
-    start_tls: yes
     validate_certs: no
     dn: "cn={{ item.id }},{{ openldap.ldap.structure_groups_ou_dns[item.ou] }}"
     objectClass: GroupOfUniqueNames
@@ -158,10 +139,9 @@
 
 - name: Set LDAP groups attributes
   ldap_attrs:
-    server_uri: "{{ openldap_internal_uri }}"
+    server_uri: "ldaps://{{ nginx_keepalived_instance_internal_virtual_ip }}"
     bind_dn: "{{ openldap.ldap.admin_dn }}"
     bind_pw: "{{ openldap.ldap.admin_password }}"
-    start_tls: yes
     validate_certs: no
     dn: "cn={{ item.id }},{{ openldap.ldap.structure_groups_ou_dns[item.ou] }}"
     attributes:
@@ -173,10 +153,9 @@
 
 - name: Set LDAP groups members
   ldap_attrs:
-    server_uri: "{{ openldap_internal_uri }}"
+    server_uri: "ldaps://{{ nginx_keepalived_instance_internal_virtual_ip }}"
     bind_dn: "{{ openldap.ldap.admin_dn }}"
     bind_pw: "{{ openldap.ldap.admin_password }}"
-    start_tls: yes
     validate_certs: no
     dn: "cn={{ item.id }},{{ openldap.ldap.structure_groups_ou_dns[item.ou] }}"
     attributes:
