--- a/ansible/install_infra/roles/kubernetes-infra/defaults/main.yml
+++ b/ansible/install_infra/roles/kubernetes-infra/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 
+#kubernetes_nginx_ingress_openldap_target: "openldapservice:openldapport"
 #kubernetes_nginx_ingress_mqtt_target: "mqttservice:mqttport"
 
 kubernetes_local_lvm_storage_class_name: local-lvm
