--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -85,7 +85,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 			controller.vm.network "public_network"
 		end
 		controller.vm.synced_folder "../", "/opt/provision", type: "virtualbox"
-		controller.vm.provision "shell", path: "init_new_node.sh", args: "ansible", keep_color: true
+		controller.vm.provision "shell", path: "init_new_node.sh", args: "controller", keep_color: true
 		controller.vm.provision "shell", path: "ansible_provisioning.sh", keep_color: true
 		controller.vm.provision "shell", path: "up_node.sh", run: "always", keep_color: true
 	end
