Add comment to enable dedicated controller on vagrant

--- a/vagrant/Vagrantconfig.yaml
+++ b/vagrant/Vagrantconfig.yaml
@@ -7,6 +7,15 @@ common:
   sata_controller_name: "SATA Controller"
   network_cidr: 192.168.100.0/24
 
+# Dedicated controller
+#controller:
+#  name: "controller"
+#  cpu: 1
+#  memory: 1024
+#  ip: 192.168.100.20
+#  docker_disk_size: 32768
+
+# Use master-1 to save resources:
 controller:
   name: "master-1"
   cpu: 3
