Fix NFS mock server on vagrant

--- a/ansible/inventories/vagrant/group_vars/controller/kubernetes.yml
+++ b/ansible/inventories/vagrant/group_vars/controller/kubernetes.yml
@@ -6,13 +6,13 @@ kubectl_params: "--kubeconfig {{ kubeconfig_path }} --context {{ kubeconfig_cont
 
 kubernetes_nfs_storage:
   nfs-multimedia:
-    nfs_server: "{{ hostvars['master-1'].ansible_host }}"
+    nfs_server: "{{ hostvars[groups.controller[0]].ansible_host }}"
     nfs_path: /opt/mock_nas/Multimedia
     reclaim_policy: Retain
     labels:
       detail: multimedia
   nfs-download:
-    nfs_server: "{{ hostvars['master-1'].ansible_host }}"
+    nfs_server: "{{ hostvars[groups.controller[0]].ansible_host }}"
     nfs_path: /opt/mock_nas/Download
     reclaim_policy: Retain
     labels:
