--- a/ansible/inventories/vagrant/inventory.ini
+++ b/ansible/inventories/vagrant/inventory.ini
@@ -5,7 +5,9 @@ master-3 ansible_host=192.168.100.13
 node-home ansible_host=192.168.100.14
 
 [controller]
-localhost ansible_python_interpreter=/root/ansible_venv/bin/python
+# Dedicated controller
+# localhost ansible_python_interpreter=/root/ansible_venv/bin/python ansible_host=192.168.100.20
+master-1 ansible_python_interpreter=/root/ansible_venv/bin/python ansible_host=192.168.100.11
 
 [all_hosts]
 master-1
