--- a/ansible/install_applications/vars/download-sickchill.yml
+++ b/ansible/install_applications/vars/download-sickchill.yml
@@ -24,7 +24,7 @@ sickchill:
     app.kubernetes.io/version: "{{ _sickchill_var_loader.base_image.tag }}"
 
   container:
-    image: "{{ docker_registry.url }}/sickchill:{{ _sickchill_var_loader.version }}_{{ _sickchill_var_loader.base_image.name }}{{ _sickchill_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/sickchill:{{ _sickchill_var_loader.version }}_{{ _sickchill_var_loader.base_image.name }}{{ _sickchill_var_loader.base_image.tag }}"
     requests_cpu: "{{ sickchill_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ sickchill_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ sickchill_container_limits_cpu | default('500m') }}"
