--- a/ansible/install_applications/vars/home-homeassistant.yml
+++ b/ansible/install_applications/vars/home-homeassistant.yml
@@ -23,7 +23,7 @@ homeassistant:
     app.kubernetes.io/part-of: homeassistant
 
   container:
-    image: "{{ docker_registry.url }}/{{ _homeassistant_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _homeassistant_var_loader.base_image.tag }}-custom"
+    image: "{{ docker_private_registry.url }}/{{ _homeassistant_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _homeassistant_var_loader.base_image.tag }}-custom"
     requests_cpu: "{{ homeassistant_homeassistant_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ homeassistant_homeassistant_container_requests_memory | default('512Mi') }}"
     limits_cpu: "{{ homeassistant_homeassistant_container_limits_cpu | default('250m') }}"
@@ -77,7 +77,7 @@ homeassistant_mysql:
     app.kubernetes.io/part-of: homeassistant
   
   container:
-    image: "{{ docker_registry.url }}/home-assistant-{{ _homeassistant_mysql_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _homeassistant_mysql_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/home-assistant-{{ _homeassistant_mysql_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _homeassistant_mysql_var_loader.base_image.tag }}"
     requests_cpu: "{{ homeassistant_mysql_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ homeassistant_mysql_container_requests_memory | default('512Mi') }}"
     limits_cpu: "{{ homeassistant_mysql_container_limits_cpu | default('200m') }}"
