--- a/ansible/install_applications/vars/infra-gandi-livedns.yml
+++ b/ansible/install_applications/vars/infra-gandi-livedns.yml
@@ -21,7 +21,7 @@ gandi_livedns:
     app.kubernetes.io/version: "{{ _gandi_livedns_var_loader.version }}"
 
   container:
-    image: "{{ docker_registry.url }}/gandi_livedns:{{ _gandi_livedns_var_loader.version }}-{{ _gandi_livedns_var_loader.base_image.name | regex_replace('.*/', '') }}-{{ _gandi_livedns_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/gandi_livedns:{{ _gandi_livedns_var_loader.version }}-{{ _gandi_livedns_var_loader.base_image.name | regex_replace('.*/', '') }}-{{ _gandi_livedns_var_loader.base_image.tag }}"
     requests_cpu: "{{ docker_registry_ui_container_requests_cpu | default('25m') }}"
     requests_memory: "{{ docker_registry_ui_container_requests_memory | default('16Mi') }}"
     limits_cpu: "{{ docker_registry_ui_container_limits_cpu | default('50m') }}"
