--- a/ansible/install_applications/vars/infra-mailhog.yml
+++ b/ansible/install_applications/vars/infra-mailhog.yml
@@ -22,7 +22,7 @@ mailhog:
     app.kubernetes.io/part-of: zonemta
 
   container:
-    image: "{{ docker_registry.url }}/{{ _mailhog_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _mailhog_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/{{ _mailhog_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _mailhog_var_loader.base_image.tag }}"
     requests_cpu: "{{ mailhog_container_requests_cpu | default('25m') }}"
     requests_memory: "{{ mailhog_container_requests_memory | default('64Mi') }}"
     limits_cpu: "{{ mailhog_container_limits_cpu | default('100m') }}"
