--- a/ansible/install_applications/vars/infra-pihole.yml
+++ b/ansible/install_applications/vars/infra-pihole.yml
@@ -21,7 +21,7 @@ pihole:
     app.kubernetes.io/version: "{{ _pihole_var_loader.base_image.tag }}"
 
   container:
-    image: "{{ docker_registry.url }}/{{ _pihole_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _pihole_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/{{ _pihole_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _pihole_var_loader.base_image.tag }}"
     requests_cpu: "{{ pihole_container_requests_cpu | default('25m') }}"
     requests_memory: "{{ pihole_container_requests_memory | default('128Mi') }}"
     limits_cpu: "{{ pihole_container_limits_cpu | default('250m') }}" # Web UI requires more CPU, but is rarely used
