--- a/ansible/install_applications/vars/infra-unifi.yml
+++ b/ansible/install_applications/vars/infra-unifi.yml
@@ -20,7 +20,7 @@ unifi:
     app.kubernetes.io/version: "{{ _unifi_var_loader.base_image.tag }}"
 
   container:
-    image: "{{ docker_registry.url }}/{{ _unifi_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _unifi_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/{{ _unifi_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _unifi_var_loader.base_image.tag }}"
     requests_cpu: "{{ unifi_container_requests_cpu | default('25m') }}"
     requests_memory: "{{ unifi_container_requests_memory | default('1024Mi') }}"
     limits_cpu: "{{ unifi_container_limits_cpu | default('250m') }}"
