--- a/ansible/install_applications/vars/monitoring-grafana.yml
+++ b/ansible/install_applications/vars/monitoring-grafana.yml
@@ -20,7 +20,7 @@ grafana:
     app.kubernetes.io/version: "{{ _grafana_var_loader.base_image.tag }}"
 
   container:
-    image: "{{ docker_registry.url }}/{{ _grafana_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _grafana_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/{{ _grafana_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _grafana_var_loader.base_image.tag }}"
     requests_cpu: "{{ grafana_container_requests_cpu | default('50m') }}"
     requests_memory: "{{ grafana_container_requests_memory | default('100Mi') }}"
     limits_cpu: "{{ grafana_container_limits_cpu | default('400m') }}"
