--- a/ansible/install_applications/vars/_common.yml
+++ b/ansible/install_applications/vars/_common.yml
@@ -18,4 +18,7 @@ busybox:
   container:
     # Our docker registry statefulset uses busybox for initContainer, it can't pull it from itself
     public_image: "{{ _busybox_var_loader.base_image.name }}:{{ _busybox_var_loader.base_image.tag }}"
-    image: "{{ docker_registry.url }}/{{ _busybox_var_loader.base_image.name }}:{{ _busybox_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/{{ _busybox_var_loader.base_image.name }}:{{ _busybox_var_loader.base_image.tag }}"
+
+docker_private_registry:
+  url: "{{ docker_registry.url }}"
