--- a/ansible/install_applications/vars/auth-lemonldap.yml
+++ b/ansible/install_applications/vars/auth-lemonldap.yml
@@ -20,7 +20,7 @@ lemonldap:
     app.kubernetes.io/version: "{{ _lemonldap_var_loader.base_image.tag }}"
 
   container:
-    image: "{{ docker_registry.url }}/{{ _lemonldap_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _lemonldap_var_loader.base_image.tag }}-custom"
+    image: "{{ docker_private_registry.url }}/{{ _lemonldap_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _lemonldap_var_loader.base_image.tag }}-custom"
     requests_cpu: "{{ lemonldap_container_requests_cpu | default('50m') }}"
     requests_memory: "{{ lemonldap_container_requests_memory | default('384Mi') }}"
     limits_cpu: "{{ lemonldap_container_limits_cpu | default('150m') }}"
