--- a/ansible/install_applications/vars/auth-phpldapadmin.yml
+++ b/ansible/install_applications/vars/auth-phpldapadmin.yml
@@ -23,7 +23,7 @@ phpldapadmin:
     app.kubernetes.io/version: "{{ _phpldapadmin_var_loader.version }}"
 
   container:
-    image: "{{ docker_registry.url }}/phpldapadmin-{{ _phpldapadmin_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _phpldapadmin_var_loader.version }}-{{ _phpldapadmin_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/phpldapadmin-{{ _phpldapadmin_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _phpldapadmin_var_loader.version }}-{{ _phpldapadmin_var_loader.base_image.tag }}"
     requests_cpu: "{{ phpldapadmin_container_requests_cpu | default('50m') }}"
     requests_memory: "{{ phpldapadmin_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ phpldapadmin_container_limits_cpu | default('250m') }}"
