--- a/ansible/install_applications/vars/download-sabnzbd.yml
+++ b/ansible/install_applications/vars/download-sabnzbd.yml
@@ -35,7 +35,7 @@ sabnzbd:
       version: 12.1.08
 
   container:
-    image: "{{ docker_registry.url }}/sabnzbd:{{ _sabnzbd_var_loader.repo.version }}_{{ _sabnzbd_var_loader.base_image.name }}{{ _sabnzbd_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/sabnzbd:{{ _sabnzbd_var_loader.repo.version }}_{{ _sabnzbd_var_loader.base_image.name }}{{ _sabnzbd_var_loader.base_image.tag }}"
     requests_cpu: "{{ sabnzbd_container_requests_cpu | default('200m') }}"
     requests_memory: "{{ sabnzbd_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ sabnzbd_container_limits_cpu | default('500m') }}"
