--- a/ansible/install_applications/vars/home-nodered.yml
+++ b/ansible/install_applications/vars/home-nodered.yml
@@ -21,7 +21,7 @@ nodered:
     app.kubernetes.io/version: "{{ _nodered_var_loader.base_image.tag }}-custom"
 
   container:
-    image: "{{ docker_registry.url }}/{{ _nodered_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _nodered_var_loader.base_image.tag }}-custom"
+    image: "{{ docker_private_registry.url }}/{{ _nodered_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _nodered_var_loader.base_image.tag }}-custom"
     requests_cpu: "{{ nodered_container_requests_cpu | default('25m') }}"
     requests_memory: "{{ nodered_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ nodered_container_limits_cpu | default('200m') }}"
