--- a/ansible/install_applications/vars/infra-gotify.yml
+++ b/ansible/install_applications/vars/infra-gotify.yml
@@ -22,7 +22,7 @@ gotify:
     app.kubernetes.io/version: "{{ _gotify_var_loader.base_image.tag }}"
 
   container:
-    image: "{{ docker_registry.url }}/gotify-server:{{ _gotify_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/gotify-server:{{ _gotify_var_loader.base_image.tag }}"
     requests_cpu: "{{ gotify_container_requests_cpu | default('25m') }}"
     requests_memory: "{{ gotify_container_requests_memory | default('64Mi') }}"
     limits_cpu: "{{ gotify_container_limits_cpu | default('100m') }}"
