--- a/ansible/install_applications/vars/infra-kubernetes-metrics-server.yml
+++ b/ansible/install_applications/vars/infra-kubernetes-metrics-server.yml
@@ -21,7 +21,7 @@ kubernetes_metrics_server:
     app.kubernetes.io/version: "{{ _kubernetes_metrics_server_var_loader.base_image.tag }}"
 
   container:
-    image: "{{ docker_registry.url }}/{{ _kubernetes_metrics_server_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _kubernetes_metrics_server_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/{{ _kubernetes_metrics_server_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _kubernetes_metrics_server_var_loader.base_image.tag }}"
     requests_cpu: "{{ kubernetes_metrics_server_container_requests_cpu | default('25m') }}"
     requests_memory: "{{ kubernetes_metrics_server_container_requests_memory | default('128Mi') }}"
     limits_cpu: "{{ kubernetes_metrics_server_container_limits_cpu | default('100m') }}"
