--- a/ansible/install_applications/vars/infra-reloader.yml
+++ b/ansible/install_applications/vars/infra-reloader.yml
@@ -20,7 +20,7 @@ reloader:
     app.kubernetes.io/version: "{{ _reloader_var_loader.base_image.tag }}"
 
   container:
-    image: "{{ docker_registry.url }}/{{ _reloader_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _reloader_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/{{ _reloader_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _reloader_var_loader.base_image.tag }}"
     requests_cpu: "{{ reloader_container_requests_cpu | default('10m') }}"
     requests_memory: "{{ reloader_container_requests_memory | default('128Mi') }}"
     limits_cpu: "{{ reloader_container_limits_cpu | default('50m') }}"
