--- a/ansible/install_applications/vars/logging-elasticsearch.yml
+++ b/ansible/install_applications/vars/logging-elasticsearch.yml
@@ -24,7 +24,7 @@ elasticsearch:
     app.kubernetes.io/part-of: elasticsearch
   
   container:
-    image: "{{ docker_registry.url }}/{{ _elasticsearch_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _elasticsearch_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/{{ _elasticsearch_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _elasticsearch_var_loader.base_image.tag }}"
     requests_cpu: "{{ elasticsearch_container_requests_cpu | default('250m') }}"
     requests_memory: "{{ elasticsearch_container_requests_memory | default('1024Mi') }}"
     limits_cpu: "{{ elasticsearch_container_limits_cpu | default('750m') }}"
@@ -78,7 +78,7 @@ elasticsearch_exporter:
     app.kubernetes.io/part-of: elasticsearch
   
   container:
-    image: "{{ docker_registry.url }}/{{ _elasticsearch_exporter_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _elasticsearch_exporter_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/{{ _elasticsearch_exporter_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _elasticsearch_exporter_var_loader.base_image.tag }}"
     requests_cpu: "{{ elasticsearch_exporter_container_requests_cpu | default('25m') }}"
     requests_memory: "{{ elasticsearch_exporter_container_requests_memory | default('64Mi') }}"
     limits_cpu: "{{ elasticsearch_exporter_container_limits_cpu | default('100m') }}"
