--- a/ansible/install_applications/vars/logging-fluentd.yml
+++ b/ansible/install_applications/vars/logging-fluentd.yml
@@ -22,7 +22,7 @@ fluentd:
     app.kubernetes.io/version: "{{ _fluentd_var_loader.base_image.tag }}-custom"
 
   container:
-    image: "{{ docker_registry.url }}/{{ _fluentd_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _fluentd_var_loader.base_image.tag }}-custom"
+    image: "{{ docker_private_registry.url }}/{{ _fluentd_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _fluentd_var_loader.base_image.tag }}-custom"
     requests_cpu: "{{ fluentd_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ fluentd_container_requests_memory | default('192Mi') }}"
     limits_cpu: "{{ fluentd_container_limits_cpu | default('500m') }}"
