--- a/ansible/install_applications/vars/monitoring-apcups-exporter.yml
+++ b/ansible/install_applications/vars/monitoring-apcups-exporter.yml
@@ -27,7 +27,7 @@ apcups_exporter:
     app.kubernetes.io/version: "{{ _apcups_exporter_var_loader.repo.version }}-custom"
 
   container:
-    image: "{{ docker_registry.url }}/apcups-exporter:{{ _apcups_exporter_var_loader.repo.version }}-custom"
+    image: "{{ docker_private_registry.url }}/apcups-exporter:{{ _apcups_exporter_var_loader.repo.version }}-custom"
     requests_cpu: "{{ apcups_exporter_container_requests_cpu | default('20m') }}"
     requests_memory: "{{ apcups_exporter_container_requests_memory | default('32Mi') }}"
     limits_cpu: "{{ apcups_exporter_container_limits_cpu | default('100m') }}"
