--- a/ansible/install_applications/vars/monitoring-kube-state-metrics.yml
+++ b/ansible/install_applications/vars/monitoring-kube-state-metrics.yml
@@ -21,7 +21,7 @@ kube_state_metrics:
     app.kubernetes.io/version: "{{ _kube_state_metrics_var_loader.base_image.tag }}"
 
   container:
-    image: "{{ docker_registry.url }}/{{ _kube_state_metrics_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _kube_state_metrics_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/{{ _kube_state_metrics_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _kube_state_metrics_var_loader.base_image.tag }}"
     requests_cpu: "{{ kube_state_metrics_container_requests_cpu | default('20m') }}"
     requests_memory: "{{ kube_state_metrics_container_requests_memory | default('192Mi') }}"
     limits_cpu: "{{ kube_state_metrics_container_limits_cpu | default('100m') }}"
@@ -37,7 +37,7 @@ _kube_state_metrics_rbac_proxy_var_loader:
 kube_state_metrics_rbac_proxy:
   base_image: "{{ _kube_state_metrics_rbac_proxy_var_loader.base_image }}"
   container:
-    image: "{{ docker_registry.url }}/{{ _kube_state_metrics_rbac_proxy_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _kube_state_metrics_rbac_proxy_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/{{ _kube_state_metrics_rbac_proxy_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _kube_state_metrics_rbac_proxy_var_loader.base_image.tag }}"
     requests_cpu: "{{ kube_state_metrics_rbac_proxy_container_requests_cpu | default('10m') }}"
     requests_memory: "{{ kube_state_metrics_rbac_proxy_container_requests_memory | default('32Mi') }}"
     limits_cpu: "{{ kube_state_metrics_rbac_proxy_container_limits_cpu | default('250m') }}"
