--- a/ansible/install_applications/vars/monitoring-node-exporter.yml
+++ b/ansible/install_applications/vars/monitoring-node-exporter.yml
@@ -21,7 +21,7 @@ node_exporter:
     app.kubernetes.io/version: "{{ _node_exporter_var_loader.base_image.tag }}"
 
   container:
-    image: "{{ docker_registry.url }}/{{ _node_exporter_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _node_exporter_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/{{ _node_exporter_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _node_exporter_var_loader.base_image.tag }}"
     requests_cpu: "{{ node_exporter_container_requests_cpu | default('102m') }}"
     requests_memory: "{{ node_exporter_container_requests_memory | default('180Mi') }}"
     limits_cpu: "{{ node_exporter_container_limits_cpu | default('250m') }}"
@@ -38,7 +38,7 @@ _node_exporter_rbac_proxy_var_loader:
 node_exporter_rbac_proxy:
   base_image: "{{ _node_exporter_rbac_proxy_var_loader.base_image }}"
   container:
-    image: "{{ docker_registry.url }}/{{ _node_exporter_rbac_proxy_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _node_exporter_rbac_proxy_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/{{ _node_exporter_rbac_proxy_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _node_exporter_rbac_proxy_var_loader.base_image.tag }}"
     requests_cpu: "{{ node_exporter_container_requests_cpu | default('10m') }}"
     requests_memory: "{{ node_exporter_container_requests_memory | default('20Mi') }}"
     limits_cpu: "{{ node_exporter_container_limits_cpu | default('20m') }}"
