--- a/ansible/install_applications/vars/monitoring-pihole-exporter.yml
+++ b/ansible/install_applications/vars/monitoring-pihole-exporter.yml
@@ -20,7 +20,7 @@ pihole_exporter:
     app.kubernetes.io/version: "{{ _pihole_exporter_var_loader.base_image.tag }}"
 
   container:
-    image: "{{ docker_registry.url }}/{{ _pihole_exporter_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _pihole_exporter_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/{{ _pihole_exporter_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _pihole_exporter_var_loader.base_image.tag }}"
     requests_cpu: "{{ pihole_exporter_container_requests_cpu | default('25m') }}"
     requests_memory: "{{ pihole_exporter_container_requests_memory | default('32Mi') }}"
     limits_cpu: "{{ pihole_exporter_container_limits_cpu | default('50m') }}"
