--- a/ansible/install_applications/vars/stream-airsonic.yml
+++ b/ansible/install_applications/vars/stream-airsonic.yml
@@ -20,7 +20,7 @@ airsonic:
     app.kubernetes.io/version: "{{ _airsonic_var_loader.base_image.tag }}"
 
   container:
-    image: "{{ docker_registry.url }}/{{ _airsonic_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _airsonic_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/{{ _airsonic_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _airsonic_var_loader.base_image.tag }}"
     requests_cpu: "{{ airsonic_container_requests_cpu | default('200m') }}"
     requests_memory: "{{ airsonic_container_requests_memory | default('512Mi') }}"
     limits_cpu: "{{ airsonic_container_limits_cpu | default('1000m') }}"
