--- a/ansible/install_applications/vars/stream-jellyfin.yml
+++ b/ansible/install_applications/vars/stream-jellyfin.yml
@@ -24,10 +24,10 @@ jellyfin:
     app.kubernetes.io/version: "{{ _jellyfin_var_loader.base_image.tag }}"
 
   conf_injection_container:
-    image: "{{ docker_registry.url }}/jellyfin-conf-inject-{{ _jellyfin_var_loader.conf_injection_base_image.name | regex_replace('.*/', '') }}:{{ _jellyfin_var_loader.conf_injection_base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/jellyfin-conf-inject-{{ _jellyfin_var_loader.conf_injection_base_image.name | regex_replace('.*/', '') }}:{{ _jellyfin_var_loader.conf_injection_base_image.tag }}"
 
   container:
-    image: "{{ docker_registry.url }}/{{ _jellyfin_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _jellyfin_var_loader.base_image.tag }}-custom"
+    image: "{{ docker_private_registry.url }}/{{ _jellyfin_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _jellyfin_var_loader.base_image.tag }}-custom"
     requests_cpu: "{{ jellyfin_container_requests_cpu | default('250m') }}"
     requests_memory: "{{ jellyfin_container_requests_memory | default('512Mi') }}"
     limits_cpu: "{{ jellyfin_container_limits_cpu | default('1000m') }}"
