--- a/ansible/install_applications/vars/web-ttrss.yml
+++ b/ansible/install_applications/vars/web-ttrss.yml
@@ -33,7 +33,7 @@ ttrss:
     app.kubernetes.io/part-of: ttrss
 
   container:
-    image: "{{ docker_registry.url }}/ttrss-{{ _ttrss_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _ttrss_var_loader.commit }}-{{ _ttrss_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/ttrss-{{ _ttrss_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _ttrss_var_loader.commit }}-{{ _ttrss_var_loader.base_image.tag }}"
     requests_cpu: "{{ ttrss_container_requests_cpu | default('25m') }}"
     requests_memory: "{{ ttrss_container_requests_memory | default('64Mi') }}"
     limits_cpu: "{{ ttrss_container_limits_cpu | default('250m') }}"
@@ -86,7 +86,7 @@ ttrss_pgsql:
     app.kubernetes.io/part-of: ttrss
 
   container:
-    image: "{{ docker_registry.url }}/tt-rss-{{ _ttrss_pgsql_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _ttrss_pgsql_var_loader.base_image.tag }}"
+    image: "{{ docker_private_registry.url }}/tt-rss-{{ _ttrss_pgsql_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _ttrss_pgsql_var_loader.base_image.tag }}"
     requests_cpu: "{{ ttrss_pgsql_container_requests_cpu | default('50m') }}"
     requests_memory: "{{ ttrss_pgsql_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ ttrss_pgsql_container_limits_cpu | default('250m') }}"
